--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
               <h4 style='font-weight: bold'>亳州市品驾酒业有限公司</h4></li>
             <li>厂址：安徽省亳州市谯城区古井镇三曹路9号</li>
             <li>法定代表人：孙管</li>
-            <li>手机：18815689120</li>
+            <li>手机：19965999699</li>
             <li>业务部：顾连生</li>
             <li>手机：18815689115</li>
             <li>邮编：236800</li>
@@ -88,7 +88,11 @@
       </div>
       <div class="about_weixin">
         <h3 style='margin: 40px; font-weight:bold; color: #555'>品驾酒负责人微信，扫一扫添加好友：</h3>
-        <img src="./images/weixin.jpg" alt="微信" width=674 height=896>
+        <img src="./images/company/weixin.jpg" alt="微信" width=674 height=896>
+      </div>
+      <div class="about_weixin">
+        <h3 style='margin: 40px; font-weight:bold; color: #555'>亳州市管达蛋白饲料有限公司</h3>
+        <img src="./images/company/gongsi.jpg" alt="微信" width=674 height=896>
       </div>
     </div>
   </div>
