--- a/introduction.html
+++ b/introduction.html
@@ -43,7 +43,7 @@
     text-indent: 1cm;
   }
 
-  .ul2 li:nth-child(2n) {
+  .ul3 li:nth-child(2n) {
     background: #9c061b;
     line-height: 40px;
     font-weight: bold;
@@ -53,7 +53,7 @@
   }
 
   .ul1 img,
-  .ul3 img {
+  .ul4 img {
     height: 300px;
     width: 100%;
   }
@@ -66,6 +66,12 @@
   .nav-pills>li.active>a:hover,
   .nav-pills>li.active>a:focus {
     background: #9c061b;
+  }
+  .ul2 h3{
+      background:#9c061b;
+      color:#fff;
+      padding: 10px 0;
+      border-radius: 20px;
   }
   </style>
 </head>
@@ -93,6 +99,7 @@
       <div class="col-md-3">
         <ul class="nav nav-pills nav-stacked">
           <li class="active"><a href="#">生产商简介</a></li>
+          <li><a href="#">企业宣传</a></li>
           <li><a href="#">企业文化</a></li>
           <li><a href="#">酿造工艺</a></li>
         </ul>
@@ -112,6 +119,63 @@
           <li>雄关漫道真如铁，而今迈步从头越。好运酒业铸造了辉煌，更期待超越辉煌，未来将齐心合力，不断发展，唯进步不止步，致力打造中国白酒百年品牌。</li>
         </ul>
         <ul class="ul2">
+          <li>
+            <h3 class="page-header text-center">相信品牌的力量</h3>
+          </li>
+          <li class="text-center">
+            <p style='font-size: 16px; color: #8f0002;font-weight: bold; margin-bottom: 15px'>央视频道荣誉播出品牌</p>
+            <video autobuffer controls>
+              <source src="./images/company/shiping.mp4">
+              <object type="video/mp4" data="./images/company/shiping.mp4" width="320" height="240">
+              <param name="src" value="./images/company/shiping.mp4">
+              <param name="autoplay" value="false">
+              <param name="autoStart" value="0">
+              <p><a href="./images/company/shiping.mp4">Download this video file.</a></p>
+              </object>
+            </video>
+          </li>
+          <li class="text-center">
+            <img src="./images/company/zhengming.png" alt="" width="">
+          </li>
+          <li class="text-center">
+            <img src="./images/company/pinjiaxuanchuan.png" alt="" width="">
+          </li>
+          <li class="text-center">
+            <img src="./images/company/yangshi.jpg" alt="" width="">
+          </li>
+          <li>
+            <h3 class="page-header text-center">品牌展播</h3>
+          </li>
+          <li class="text-center">
+            <img src="./images/company/jiuye1.jpg" alt="" width="">
+            <img src="./images/company/jiuye2.jpg" alt="" width="">
+          </li>
+          <li>
+            <h3 class="page-header text-center">执照证书</h3>
+          </li>
+          <li class="text-center">
+          <p style='font-size: 16px; color: #8f0002;font-weight: bold;'>营业执照</p>
+            <img src="./images/company/zhizhao.jpg" alt="" width="">
+          </li>
+          <li class="text-center">
+          <p style='font-size: 16px; color: #8f0002;font-weight: bold;'>收藏证书</p>
+            <img src="./images/company/shoucang.png" alt="" width="">
+          </li>
+          <li>
+            <h3 class="page-header text-center">名家题字</h3>
+          </li>
+          <li class="text-center">
+          <p style='font-size: 16px; color: #8f0002;font-weight: bold;'>国家一级美术师，中央国家机关美术协会副秘书长-林院长为品驾酒题字</p>
+            <img src="./images/company/shufa1.jpg" alt="" width="">
+          </li>
+          <li class="text-center">
+            <img src="./images/company/shufa2.jpg" alt="" width="">
+          </li>
+          <li class="text-center">
+            <img src="./images/company/shufa3.jpg" alt="" width="">
+          </li>
+        </ul>
+        <ul class="ul3">
           <li>
             <h3 class="page-header text-center">企业文化</h3></li>
           <li>以人为本</li>
@@ -142,7 +206,7 @@
     我们将尽力全面服务于经销商，服务于消费者，共同培育、壮大市场。</pre>
           </li>
         </ul>
-        <ul class="ul3">
+        <ul class="ul4">
           <li>
             <h3 class="page-header text-center">酿造工艺</h3></li>
           <li>好运酒业秉承古井镇千年传统的酿造工艺，纯手工酿造，按照"量质入坛"，恒温窖藏，使产品具有"清如水晶、香如幽兰、入口绵甜、回味经久不息"的特点。</li>
