--- a/join.html
+++ b/join.html
@@ -117,6 +117,7 @@
             </a>
           </div>
           <div class="panel-footer">
+            <p style="margin-bottom:10px; font-weight:bold; color:#9c061b">加盟热线：400-0558-979</p>
             <p>有意加盟者可联系品驾酒业总负责人孙管，请前往<a href="./about.html">联系我们</a>获取联系方式！</p>
           </div>
         </div>
