--- a/index.html
+++ b/index.html
@@ -59,11 +59,14 @@
         <div class="row">
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="./images/title-1.jpg" width=255 height=255>
+              <img src="./images/products/zhengcang16-3.png" width=255 height=255>
               <div class="caption">
                 <h4>珍藏原浆</h4>
                 <a href="#">品驾牌-珍藏原浆十六年</a>
-                <span class="content-price">￥398.0</span>
+                <p class="content-price">
+                  <span class="saoma">扫码价：<span>￥368</span> </span>
+                  <span>抢购价：<span>￥188</span> </span>
+                </p>
               </div>
             </div>
           </div>
@@ -72,28 +75,37 @@
               <img src="./images/title-2.jpg" width=255 height=255>
               <div class="caption">
                 <h4>品驾贡酒</h4>
-                <a href="#">品驾牌-品驾贡酒十年</a>
-                <span class="content-price">￥399.0</span>
+                <a href="#">品驾牌-品驾贡酒-玉佩</a>
+                <p class="content-price">
+                  <span class="saoma">扫码价：<span>￥780</span> </span>
+                  <span>抢购价：<span>￥320</span> </span>
+                </p>
               </div>
             </div>
           </div>
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="./images/title-3.jpg" width=255 height=255>
+              <img src="./images/title-9.jpg" width=255 height=255>
               <div class="caption">
                 <h4>窖藏老酒</h4>
                 <a href="#">品驾牌-窖藏十年老酒</a>
-                <span class="content-price">￥880.0</span>
+                <p class="content-price">
+                  <span class="saoma">扫码价：<span>￥2688</span> </span>
+                  <span>抢购价：<span>￥888</span> </span>
+                </p>
               </div>
             </div>
           </div>
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="./images/title-4.jpg" width=255 height=255>
+              <img src="./images/products/pinjia10-2.jpg" width=255 height=255>
               <div class="caption">
-                <h4>内部特供</h4>
-                <a href="#">品驾牌-内部接待用酒</a>
-                <span class="content-price">￥188.0</span>
+                <h4>品驾贡酒</h4>
+                <a href="#">品驾牌-品驾贡酒十年</a>
+                <p class="content-price">
+                  <span class="saoma">扫码价：<span>￥380</span> </span>
+                  <span>抢购价：<span>￥298</span> </span>
+                </p>
               </div>
             </div>
           </div>
@@ -112,31 +124,40 @@
         <div class="row">
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="./images/title-7.jpg" width=255 height=255>
+              <img src="./images/products/zhengcang30.jpg" width=255 height=255>
               <div class="caption">
                 <h4>珍藏原浆</h4>
-                <a href="#">品驾牌-珍藏原浆十六年</a>
-                <span class="content-price">￥398.0</span>
+                <a href="#">品驾牌-珍藏原浆二十年</a>
+                <p class="content-price">
+                  <span class="saoma">扫码价：<span>￥398</span> </span>
+                  <span>抢购价：<span>￥198</span> </span>
+                </p>
               </div>
             </div>
           </div>
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="./images/title-6.jpg" width=255 height=255>
+              <img src="./images/products/pinjia8-3.jpg" width=255 height=255>
+              <div class="caption">
+                <h4>品驾贡酒</h4>
+                <a href="#">品驾牌-品驾贡酒八年</a>
+                <p class="content-price">
+                  <span class="saoma">扫码价：<span>￥360</span> </span>
+                  <span>抢购价：<span>￥288</span> </span>
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="thumbnail">
+              <img src="./images/products/pinjia10-3.jpg" width=255 height=255>
               <div class="caption">
                 <h4>品驾贡酒</h4>
                 <a href="#">品驾牌-品驾贡酒十年</a>
-                <span class="content-price">￥399.0</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="thumbnail">
-              <img src="./images/title-9.jpg" width=255 height=255>
-              <div class="caption">
-                <h4>窖藏老酒</h4>
-                <a href="#">品驾牌-窖藏十年老酒</a>
-                <span class="content-price">￥880.0</span>
+                 <p class="content-price">
+                  <span class="saoma">扫码价：<span>￥380</span> </span>
+                  <span>抢购价：<span>￥298</span> </span>
+                </p>
               </div>
             </div>
           </div>
@@ -146,7 +167,9 @@
               <div class="caption">
                 <h4>内部特供</h4>
                 <a href="#">品驾牌-内部接待用酒</a>
-                <span class="content-price">￥188.0</span>
+                <p class="content-price">
+                  <span>抢购价：<span>￥88</span> </span>
+                </p>
               </div>
             </div>
           </div>
